--- a/go-ipfs/gxlibs/github.com/multiformats/go-multibase/package.json
+++ b/go-ipfs/gxlibs/github.com/multiformats/go-multibase/package.json
@@ -1,10 +1,10 @@
 {
   "author": "whyrusleeping",
   "bugs": {
-    "url": "https://github.com/multiformats/go-multibase"
+    "url": "https://github.com/dai/go-ipfs/gxlibs/github.com/multiformats/go-multibase"
   },
   "gx": {
-    "dvcsimport": "github.com/multiformats/go-multibase"
+    "dvcsimport": "github.com/dai/go-ipfs/gxlibs/github.com/multiformats/go-multibase"
   },
   "gxDependencies": [
     {
