--- a/go-ipfs/gxlibs/github.com/multiformats/go-multicodec/package.json
+++ b/go-ipfs/gxlibs/github.com/multiformats/go-multicodec/package.json
@@ -1,10 +1,10 @@
 {
   "author": "multiformats",
   "bugs": {
-    "url": "https://github.com/multiformats/go-multicodec/issues"
+    "url": "https://github.com/dai/go-ipfs/gxlibs/github.com/multiformats/go-multicodec/issues"
   },
   "gx": {
-    "dvcsimport": "github.com/multiformats/go-multicodec"
+    "dvcsimport": "github.com/dai/go-ipfs/gxlibs/github.com/multiformats/go-multicodec"
   },
   "gxDependencies": [
     {
